<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>java.com.github.dcevm</groupId>
    <artifactId>dcevm-tests-15</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <description>Tests for DCEVM project</description>


    <properties>
        <asm.version>9.0</asm.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>${asm.version}</version>
        </dependency>

        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>${asm.version}</version>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>tools.jar</id>
            <activation>
                <jdk>1.15</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.sun</groupId>
                    <artifactId>tools</artifactId>
                    <version>1.15</version>
                    <scope>system</scope>
                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>-XX:+AllowEnhancedClassRedefinition -XX:+UseSerialGC -Xlog:redefine+class*=trace --add-opens=java.base/java.lang=ALL-UNNAMED -javaagent:${basedir}/dcevm-tests-agent.jar</argLine>
                    <!--<argLine>-XX:-UseCHA -XX:+UseG1GC -XX:+AllowEnhancedClassRedefinition -Xlog:redefine+class*=info -javaagent:${basedir}/dcevm-tests-agent.jar</argLine>-->
                    <excludedGroups>com.github.dcevm.test.category.Full</excludedGroups>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
